20171120
========
- #34474 - Bad introspection of empty complex fields inside embedded documents

20171013
========
- #34025 - Improve support for MongoDB's internal "BSON Timestamp" data type.

20170919
========
- Fixed #33753 - Correctly deal with BsonTimestamp when creating schema from introspection query
- Added #33752 - Improve logging of view schemas, both at construction and at query execution time

20170713
========
- Fixed #33192 - Simple fields always being identified as type "String" when using the introspection query

20170627
========
- Added #31888 - Review use of caches and schema

20170303
========
- Added #31468 - Improve mechanism for specifying the mongoDB schema in explicit form using the "Fields" input parameter 
- Added #29962 - Document the capability to connect via SSL

20161109
========
#29740 - Projections not being correctly delegated to MongoDB

20161108
========
#29727 - Add support to projection in mongodb
#29699 - Fix log query mongodb, adding projection and order by

20160726
========
- Check connection without using listdatabases()

20151207
========
- Fixed nullPointerException when there is a array or struct with a element with value null;
- Avoided the representation of Arrays and struts empty (without elements) in the schema of getSchemaParameters

20151119
========
- Updated mongo-java-driver to 3.1.1

20151015
========
- Added parameter Connection String, in this way we allow to connect to mongodb with Connection string Uri

20140926
--------
- Created first version of this component for Denodo 5.5