@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect</groupId>
     <artifactId>denodo-mongodb-customwrapper-6.0</artifactId>
-    <version>20171120</version>
+    <version>20180116</version>
     <packaging>jar</packaging>
     <name>denodo-mongodb-customwrapper-6.0</name>
 
