@@ -1,3 +1,7 @@
+20180116
+========
+- Fixed #35275 - Bad translation of IS NULL and IS NOT NULL filters.
+
 20171120
 ========
 - #34474 - Bad introspection of empty complex fields inside embedded documents
